--- a/src/styles/Results.css
+++ b/src/styles/Results.css
@@ -1,6 +1,7 @@
 #Results{
   padding-top: 25px;
   display: flex;
-  align-content: center;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
