--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,3 +1,15 @@
 #Search{
   width: 80%;
+  max-width: 400px;
+  padding: 25px 0px 25px 0px;
+}
+
+.App-header {
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
