--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,11 @@
   text-align: center;
 }
 
-
+#results{
+  padding-top: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
