--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,12 @@
   position: absolute;
   font-size: 2em;
   color:white;
-  margin-left: 5%;
-  margin-top: 20px;
+  margin-left: -40px;
+  margin-top: -20px;
+}
+
+#logo-image{
+  width: 400px;
 }
 
 @media only screen and (max-width: 600px) {
